Improved gradle build, moved extension-sdk classes to subproject